name:                hsua
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-2
license-file:        LICENSE
author:              Jan Sipr
maintainer:          jan.sipr@ixperta.com
--copyright:
category:            Telephony
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

flag pedantic
    description:          Pass additional warning flags and -Werror to GHC.
    default:              False
    manual:               True

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  pkgconfig-depends:   libpjproject >= 2.1.0

  other-extensions:
    ForeignFunctionInterface
    , NoImplicitPrelude
    , OverloadedStrings
    , RecordWildCards
  exposed-modules:
    Phone.Account
    Phone.Call
    Phone.Exception
    Phone.Handlers
    Phone.MonadPJ
    Phone.Run
  other-modules:
    Phone.Internal.FFI
    Phone.Internal.FFI.Account
    Phone.Internal.FFI.CallInfo
    Phone.Internal.FFI.CallManipulation
    Phone.Internal.FFI.Common
    Phone.Internal.FFI.Configuration
    Phone.Internal.FFI.Logging
    Phone.Internal.FFI.Media
    Phone.Internal.FFI.PjString
    Phone.Internal.FFI.Transport
    Phone.Internal.Thread
    Phone.Internal.Utils
  c-sources:
    cbits/pjsua_device.c

  build-depends:
    base >=4.8 && <5
    , text
    , transformers >=0.4 && <0.6
    , exceptions ==0.8.*

  ghc-options:
    -Wall
    -fwarn-tabs
    -fwarn-missing-import-lists
    -fwarn-implicit-prelude
    -threaded

  if flag(pedantic)
    ghc-options:        -Werror

executable test
  hs-source-dirs:       test, src
  main-is:              test.hs
  default-language:     Haskell2010
  other-extensions:
    NoImplicitPrelude
    , OverloadedStrings
    , RecordWildCards
  other-modules:
    Phone.Internal.FFI
    Phone.Internal.FFI.Account
    Phone.Internal.FFI.CallInfo
    Phone.Internal.FFI.CallManipulation
    Phone.Internal.FFI.Common
    Phone.Internal.FFI.Configuration
    Phone.Internal.FFI.Logging
    Phone.Internal.FFI.Media
    Phone.Internal.FFI.PjString
    Phone.Internal.FFI.Transport
    Phone.Internal.Thread
    Phone.Internal.Utils
  build-depends:
    base >=4.8 && <5
    , hsua
    , transformers >=0.4 && <0.6
    , exceptions ==0.8.*
  ghc-options:
    -Wall
    -fwarn-tabs
    -fwarn-missing-import-lists
    -fwarn-implicit-prelude
    -threaded

executable example
  hs-source-dirs:       example
  main-is:              example.hs
  default-language:     Haskell2010
  other-extensions:
    NoImplicitPrelude
    , OverloadedStrings
    , RecordWildCards
  -- other-modules:
  build-depends:
    base >=4.8 && <5
    , hsua
    , transformers >=0.4 && <0.6
  ghc-options:
    -Wall
    -fwarn-tabs
    -fwarn-missing-import-lists
    -fwarn-implicit-prelude
    -threaded

  if flag(pedantic)
    ghc-options:        -Werror
